# flexidot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  environment.yml  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  pytest.yml  ruff.yml
archive/: args.py  flexidot_v2.01_alpha01_py3.py
code/: README.md  flexidot_v1.00.py  flexidot_v1.01.py  flexidot_v1.02.py  flexidot_v1.03.py  flexidot_v1.04.py  flexidot_v1.05.py  flexidot_v1.06.py  flexidot_v1.06_3.py  flexidot_v1.06_py3.py
docs/: tutorial_add_annotation.md
documentation/: tutorial_add_annotation.md
src/flexidot/: app.py  plotting.py
src/flexidot/utils/: alphabets.py  analysis.py  args.py  checks.py  file_handling.py  logs.py  matching.py  utils.py
test-data/: custom_matrix.txt  example2.gff3  test-seqs.fas
tests/: test_matching.py
tests/test-data/: Seq1.fasta  Seq2.fasta  Seq4.fasta  custom_matrix.txt  example.gff3  example2.gff3  gff_color.config  mintir.fasta  mintir3.fasta  test-seqs.fasta
tests/test-data/sSaTar_example/: sSaTar.config  sSaTar.fas  sSaTar.gff3
