# Build system configuration
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Project metadata
[project]
name = "flexidot"
description = "Flexible dotplotting of genomic sequences."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GNU Lesser General Public License v3 (LGPLv3)"}
authors = [
    { name = "Kathrin M. Seibt"},
    { name = "Thomas Schmidt"},
    { name = "Tony Heitkam"},
]

# Classifiers for project categorization
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]

# Project dependencies
dependencies = [
  "biopython",
  "colormap>=1.3.0",
  "colour",
  "easydev",
  "matplotlib",
  "numpy",
  "regex",
  "rich",
]

# Dynamic versioning
dynamic = ["version"]

# Project URLs
[project.urls]
homepage = "https://github.com/flexidot-bio/flexidot"
documentation = "https://github.com/flexidot-bio/flexidot"
repository = "https://github.com/flexidot-bio/flexidot"

# Command-line script entry point
[project.scripts]
flexidot="flexidot.app:main"

# Hatch build configuration
[tool.hatch.build]
source = "src"

# Exclude files and directories from the build
exclude = [
    "environment.yml",
    ".github",
    ".vscode",
]

# Hatch versioning configuration
[tool.hatch.version]
source = "vcs"

# Version control system (VCS) versioning
[tool.hatch.version.vcs]
tag-pattern = "v*"  # Git tags starting with 'v' will be used for versioning
fallback-version = "0.0.0"

# Version file location for VCS
[tool.hatch.build.hooks.vcs]
version-file = "src/flexidot/_version.py"

# Optional dependencies for testing and development
[project.optional-dependencies]
tests = ["pytest", "pytest-cov", "hatch"]
dev = ["hatch", "isort", "mkdocs-jupyter","mkdocs-material", "mkdocs", "mkdocstrings-python", "mkdocstrings", "notebook", "numpydoc-validation", "pre-commit", "pymdown-extensions", "pytest-cov", "pytest", "ruff", "seaborn"]

[tool.pytest.ini_options]
addopts = "-v --cov=flexidot --cov-branch --cov-report=xml --cov-report=term"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    "C",  # mccabe rules
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
ignore = [
    "C901",  # max-complexity-10
    "E501",  # line-too-long
    "I001",  # isort-imports
    "B905",  # `zip()` without an explicit `strict=` parameter
]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.isort]
profile = "black"
known_third_party = ["Bio", "colormap", "colour", "easydev", "matplotlib", "numpy", "regex"]
known_first_party = ["flexidot"]
default_section = "THIRDPARTY"
force_sort_within_sections = true

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks
    "ES01", # but don't require an extended summary
    "EX01", # or examples
    "SA01", # or a see also section
    "SS06", # and don't require the summary to fit on one line
]
exclude = [  # don't report on checks for these
    '\.__init__$',
    '\.__repr__$',
    '\.__str__$',
]
override_SS05 = [  # allow docstrings to start with these words
    '^Process ',
    '^Assess ',
    '^Access ',
]
